--- a/Prototyping/Visuals/Visuals/Visuals.vbproj
+++ b/Prototyping/Visuals/Visuals/Visuals.vbproj
@@ -70,6 +70,8 @@
   <ItemGroup>
     <Compile Include="Lib\ConsoleController.vb" />
     <Compile Include="Lib\EnumsAndConsts.vb" />
+    <Compile Include="Lib\ErrorHandler.vb" />
+    <Compile Include="Lib\LevelRoom.vb" />
     <Compile Include="Lib\LevelMap.vb" />
     <Compile Include="Lib\PlayerInfo.vb" />
     <Compile Include="Module1.vb" />
