Added ConsoleEx to the project to provide more control over the console window; specifically it is setting the height and width of the window to 80x26, disables the minimize, maximize, resize, "quick edit" modes (mouse selection) and also turns off the blinking mouse cursor.  Additionally, the main routine is wrapped with a Try/Finally so that everything (as much as possible) will be reverted back to before the application was started in order to play nicely with the command prompt when the application is launched from the console. Modified the color of "DarkYellow" so that it is more of a brown color (same as MS-DOS). Modified the color of the "floor" dots to match sample image. Based on recommendations from within Visual Studio, did some "code cleanup" (Me.references, readonly member variables, object initializers.)

--- a/Prototyping/Visuals/Visuals/Visuals.vbproj
+++ b/Prototyping/Visuals/Visuals/Visuals.vbproj
@@ -50,6 +50,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -68,6 +69,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleEx.vb" />
     <Compile Include="Lib\ConsoleController.vb" />
     <Compile Include="Lib\EnumsAndConsts.vb" />
     <Compile Include="Lib\ErrorHandler.vb" />
