Moved "map" to a .rogue file allowing for us to use/test "dungeons". Added concept of "lit" rooms. Added ability to press insert to go down a hole. Began process of "object"-izing the world tiles.

--- a/Rogue/Rogue/Rogue.vbproj
+++ b/Rogue/Rogue/Rogue.vbproj
@@ -6,4 +6,10 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="default.rogue">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
