Added Help screen, start of inventory screen, remembers map and redraws successfully upon closing "alternate" screens, added "run" and additional (alternate) key commands.  Added message for when we encounter gold.  Added alternate movement keys.  Added diagonal movement.

--- a/Rogue/Rogue/Rogue.vbproj
+++ b/Rogue/Rogue/Rogue.vbproj
@@ -4,6 +4,10 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>Rogue</RootNamespace>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <PublishTrimmed>true</PublishTrimmed>
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <PublishSingleFile>true</PublishSingleFile>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
