--- a/Rogue/Rogue/Rogue.vbproj
+++ b/Rogue/Rogue/Rogue.vbproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -11,9 +11,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\Rogue.Core\CellType.vb" Link="Core\CellType.vb" />
+    <Compile Include="..\Rogue.Core\Door.vb" Link="Core\Door.vb" />
+    <Compile Include="..\Rogue.Core\Entity.vb" Link="Core\Entity.vb" />
+    <Compile Include="..\Rogue.Core\Hero.vb" Link="Core\Hero.vb" />
+    <Compile Include="..\Rogue.Core\Level.vb" Link="Core\Level.vb" />
+    <Compile Include="..\Rogue.Core\Map.vb" Link="Core\Map.vb" />
+    <Compile Include="..\Rogue.Core\Monster.vb" Link="Core\Monster.vb" />
+    <Compile Include="..\Rogue.Core\Param.vb" Link="Core\Param.vb" />
+    <Compile Include="..\Rogue.Core\Room.vb" Link="Core\Room.vb" />
+    <Compile Include="..\Rogue.Core\Tile.vb" Link="Core\Tile.vb" />
+    <Compile Include="..\Rogue.Core\TileType.vb" Link="Core\TileType.vb" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="default.rogue">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Core\" />
   </ItemGroup>
 
 </Project>
