--- a/Rogue/Rogue/Rogue.vbproj
+++ b/Rogue/Rogue/Rogue.vbproj
@@ -18,6 +18,7 @@
     <Compile Include="..\Rogue.Core\Level.vb" Link="Core\Level.vb" />
     <Compile Include="..\Rogue.Core\Map.vb" Link="Core\Map.vb" />
     <Compile Include="..\Rogue.Core\Monster.vb" Link="Core\Monster.vb" />
+    <Compile Include="..\Rogue.Core\ObjectType.vb" Link="Core\ObjectType.vb" />
     <Compile Include="..\Rogue.Core\Param.vb" Link="Core\Param.vb" />
     <Compile Include="..\Rogue.Core\Room.vb" Link="Core\Room.vb" />
     <Compile Include="..\Rogue.Core\Tile.vb" Link="Core\Tile.vb" />
@@ -28,10 +29,6 @@
     <None Update="default.rogue">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Core\" />
   </ItemGroup>
 
 </Project>
