--- a/Rogue/Rogue/Rogue.vbproj
+++ b/Rogue/Rogue/Rogue.vbproj
@@ -12,9 +12,11 @@
 
   <ItemGroup>
     <Compile Include="..\Rogue.Core\CellType.vb" Link="Core\CellType.vb" />
+    <Compile Include="..\Rogue.Core\Coordinate.vb" Link="Core\Coordinate.vb" />
     <Compile Include="..\Rogue.Core\Dice.vb" Link="Core\Dice.vb" />
     <Compile Include="..\Rogue.Core\Door.vb" Link="Core\Door.vb" />
     <Compile Include="..\Rogue.Core\Entity.vb" Link="Core\Entity.vb" />
+    <Compile Include="..\Rogue.Core\Face.vb" Link="Core\Face.vb" />
     <Compile Include="..\Rogue.Core\Hero.vb" Link="Core\Hero.vb" />
     <Compile Include="..\Rogue.Core\Level.vb" Link="Core\Level.vb" />
     <Compile Include="..\Rogue.Core\Map.vb" Link="Core\Map.vb" />
